@@ -3,6 +3,11 @@
 	* Bang#.userprefs:
 	  
 
+2011-09-15  WOnder93  <omosnacek@gmail.com>
+
+	* Bang#.userprefs:
+	  
+
 2011-09-10  WOnder93  <omosnacek@gmail.com>
 
 	* Bang#.sln:
